# news-finder

./: .dockerignore  .env.example  .gitignore  .gitmodules  INTEGRATION.md  LICENSE.md  README.md  package-lock.json
.circleci/: config.yml
client/: .eslintrc.json  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
client/public/styles/: Admin.css  Navigation.css
client/src/: App.tsx  env.ts  helpers.ts  index.tsx
client/src/components/: Article.tsx  Error.tsx  Label.tsx  LabelBar.tsx  Navigation.tsx
client/src/routes/: About.tsx  Admin-Feeds.tsx  Admin-Users.tsx  Admin.tsx  Home.tsx  Login.tsx  Register.tsx
client/src/styles/: Admin.css  Article.css  Home.css  LabelBar.css  Login-Register.css  Navigation.css
db/: .env.example  README.md  package-lock.json  package.json  schema.prisma  schema.sql  schema_test.prisma
db/migrations/: 20230221163513_create_users_table.sql
db/migrations/20230225091606_cookies/: migration.sql
db/migrations/20230225091940_newssources/: migration.sql
db/migrations/20230225091959_login/: migration.sql
db/migrations/20230225102511_rssentries/: migration.sql
db/migrations/20230225104944_newsarticles/: migration.sql
db/migrations/20230225105148_labels/: migration.sql
db/migrations/20230225105708_articlelabels/: migration.sql
db/migrations/20230225114628_similar/: migration.sql
db/migrations/20230226163453_rssentries_id/: migration.sql
db/migrations/20230301093229_similar/: migration.sql
db/migrations/20230312133518_unique_article_url/: migration.sql
db/migrations/20230314140244_rename_rss_entries_id_to_source_id/: migration.sql
db/migrations/20230314181523_change_article_photo_type_from_bytes_to_string/: migration.sql
db/migrations/20230314181631_make_article_fields_discription_publication_date_photo_optional/: migration.sql
db/migrations/20230321125455_removed_logged_in_field_from_user_cookies/: migration.sql
db/migrations/20230426094343_add_similarity_value_to_similar_articles/: migration.sql
db/migrations/20230429222724_newsarticle_labels/: migration.sql
db/migrations/20230430000057_articles/: migration.sql
db/migrations/20230430010516_users_articles/: migration.sql
db/migrations/20230506075025_add_feed_name/: migration.sql
db/migrations/20230506145545_add_flags_table/: migration.sql
db/migrations/20230508115524_add_language_field_to_articles/: migration.sql
db/migrations/20230513215611_/: migration.sql
db/migrations/20230514144925_feed_category/: migration.sql
db/migrations/20230515153123_users_articles/: migration.sql
docker/: .env.example  README.md  database-url.env  docker-compose.yml  server-url.env
docker/caddy/: Caddyfile
docker/migration/: Dockerfile
old-articles/: Dockerfile  main.py  pyproject.toml
old_articles/: main.py
password_hash/: password_hash.py
rss-scraper/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rss-feeds.txt
rss-scraper/.cargo/: config.toml
rss-scraper/example-data/: rssfeed1.xml  rssfeed2.xml
rss-scraper/prisma-cli/: Cargo.toml
rss-scraper/src/: cli.rs  counter.rs  error.rs  main.rs  prelude.rs  prisma.rs  scraper.rs
scripts/: deploy-docker-compose.sh
seeding/: .env.example  clear.py  hashPassword.py  requirements.txt  rss-feeds.py  user.py
server/: .clang-format  .dockerignore  .gitignore  Dockerfile  Makefile  app.py  compile_flags.txt  mypy.ini  pyproject.toml  requirements.txt  rss-feeds.txt  schema.prisma  seeding.py  test.py
server/docs/: conf.py  modules.rst  news_finder.rst  news_finder.utils.rst
server/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  news_finder.doctree  news_finder.routes.doctree  news_finder.utils.doctree
server/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  news_finder.html  news_finder.routes.html  news_finder.utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
server/docs/_build/html/_modules/: index.html
server/docs/_build/html/_modules/news_finder/: app.html  db.html  main.html  path_setup.html
server/docs/_build/html/_modules/news_finder/routes/: admin.html  article.html  error.html  root.html  rss.html  user.html
server/docs/_build/html/_modules/news_finder/utils/: error_response.html
server/docs/_build/html/_sources/: index.rst.txt  news_finder.routes.rst.txt  news_finder.rst.txt
server/lib/doctest/include/doctest/: doctest.h
server/migrations/20230225083455_init/: migration.sql
server/migrations/20230225083734_login/: migration.sql
server/news_finder/: app.py  db.py  main.py  path_setup.py  response.py  seeding.py
server/news_finder/password_hash/: command_install_argon.txt
server/news_finder/routes/: admin.py  article.py  delete_rss.py  error.py  labels.py  root.py  rss.py  source.py  user-history.py  user.py  user_history.py
server/news_finder/utils/: error_response.py
server/src/: db.py  foo.hpp  main.cpp  main.py  seeding.py
server/src/routes/: error.py  root.py  rss.py
server/test/: foo.cpp
server/tests/: README.md  __init__.py  admin_test.py  article_test.py  conftest.py  rss_test.py  user_test.py  utils.py
similarity-checker/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  tf_idf.py
similarity-checker/articles/: article0.txt  article1.txt  article10.txt  article11.txt  article2.txt  article3.txt  article4.txt  article5.txt  article6.txt  article7.txt  article8.txt  article9.txt
similarity-checker/res/stopwords/: README.md
similarity-checker/similarity_checker/: main.py  tf_idf.py  utils.py
(+18 files in other folders)
