[package]
name = "rss-scraper"
version = "0.1.1"
edition = "2021"

[workspace]
members = ["prisma-cli"]

[dependencies]
feed-rs = "1.3.0"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["macros", "rt"] }
thiserror = "1.0.39"
serde = "1.0.154"
dotenv = "0.15.0"
chrono = "0.4.24"
mime = "0.3.16"
job_scheduler_ng = "2.0.4"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.7"
default-features = false
features = ["postgresql"]
