[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "news-finder"
version = "0.1.2"
requires-python = ">=3.8"
license = { text = "MIT and Apache 2.0" }
dependencies = [
    "anyio==3.6.2",
    "asgiref==3.6.0",
    "asyncio==3.4.3",
    "attrs==22.2.0",
    "certifi==2022.12.7",
    "click==8.1.3",
    "exceptiongroup==1.1.1",
    "Flask==2.2.3",
    "h11==0.14.0",
    "httpcore==0.16.3",
    "httpx==0.23.3",
    "idna==3.4",
    "importlib-metadata==6.0.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "jsonschema==4.17.3",
    "MarkupSafe==2.1.2",
    "nodeenv==1.7.0",
    "packaging==23.0",
    "pluggy==1.0.0",
    "prisma==0.8.2",
    "pydantic==1.10.5",
    "pyright==1.1.296",
    "pyrsistent==0.19.3",
    "pytest==7.2.2",
    "pytest-asyncio==0.20.3",
    "python-dotenv==1.0.0",
    "rfc3986==1.5.0",
    "sniffio==1.3.0",
    "tomli==2.0.1",
    "tomlkit==0.11.6",
    "typing_extensions==4.5.0",
    "urllib3==1.26.14",
    "Werkzeug==2.2.3",
    "zipp==3.15.0",
]

[tool.setuptools.packages.find]
include = ["."]
namespaces = false

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]