[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "news-finder"
version = "0.1.3"
requires-python = ">=3.10"
license = { text = "MIT and Apache 2.0" }
dependencies = [
    "argon2-cffi==21.3.0",
    "asyncio==3.4.3",
    "Flask==2.2.3",
    "Flask-Cors==3.0.10",
    "flask[async]==2.2.3",
    "jsonschema==4.17.3",
    "prisma==0.8.2",
    "pyright==1.1.303",
    "pytest==7.2.2",
    "pytest-asyncio==0.20.3",
    "urllib3==1.26.14",
    "sphinx==6.1.3",
    "sphinxawesome_theme==4.0.3",
    "werkzeug==2.2.3",
]

[tool.setuptools.packages.find]
include = ["."]
namespaces = false

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
asyncio_mode = "auto"
testpaths = ["tests"]
