[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "similarity-checker"
version = "0.1.0"
requires-python = ">=3.6"
license = { text = "MIT and Apache 2.0" }
dependencies = [
    "anyio==3.6.2",
    "asyncio==3.4.3",
    "certifi==2022.12.7",
    "click==8.1.3",
    "h11==0.14.0",
    "httpcore==0.17.0",
    "httpx==0.24.0",
    "idna==3.4",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.2",
    "nodeenv==1.7.0",
    "prisma==0.8.2",
    "pydantic==1.10.7",
    "pyright==1.1.303",
    "python-dotenv==1.0.0",
    "sniffio==1.3.0",
    "tomlkit==0.11.7",
    "typing_extensions==4.5.0",
]

[tool.setuptools.packages.find]
include = ["."]
namespaces = false

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
ignore = ["similarity_checker/tf_idf.py"]

#[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = "-s"
#testpaths = ["tests"]
