[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "similarity-checker"
version = "0.1.0"
requires-python = ">=3.6"
license = { text = "MIT and Apache 2.0" }
dependencies = [
    "asyncio==3.4.3",
    "prisma==0.8.2",
    "pyright==1.1.303",
    "schedule==1.2.0",
    "numpy==1.24",
]

[tool.setuptools.packages.find]
include = ["."]
namespaces = false

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
ignore = ["similarity_checker/tf_idf.py"]

#[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = "-s"
#testpaths = ["tests"]
